Details
-
Bug
-
Status: Closed
-
P1: Critical
-
Resolution: Done
-
Qt Creator 4.1.0
-
None
-
Qt 5.8.0 Beta QNX
(qt-enterprise-windows-x86-qnx-5.8.0-beta_633.exe)
-
4317546fafdba11d39bdeb819570bc395eca5ac7
Description
QML debugging fails due to wrong parameters passed to application.
"-qmljsdebugger=port:%qml_port%,block,services:DebugMessages,QmlDebugger,V8Debugger,QmlInspector-qmljsdebugger=port:10000,block,services:DebugMessages,QmlDebugger,V8Debugger,QmlInspector"
See attached application output and debugger log for details.
Attachments
Issue Links
- mentioned in
-
Page Loading...